--- a/style.css
+++ b/style.css
@@ -186,8 +186,20 @@ p#mensaje {
     border-radius: 5px;
     margin-top: 47px;
     font-family: "gelica", sans-serif;
+ 
+}
 
-     
+.validar{
+    padding-top: 32px;
+}
+
+.validar button{
+    color: var(--color1);
+    background-color: var(--color2);
+    border-radius: 5px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    padding: 15px;
+
 }
 
 .boton a{
@@ -195,3 +207,207 @@ p#mensaje {
     color: var(--color1);
     font-size: 40px;
 }
+
+
+
+.palabras p{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 15px;
+}
+
+#op1{
+ display: block;
+ font-size: 10px;
+ margin-left: 30px;
+ font-family: "gelica", sans-serif;
+ font-weight: 400;
+ color: var(--color5);
+ line-height: 1.3;
+ padding: 10px 10px 10px 10px;
+ width: 400px;
+ max-width: 100%; 
+ box-sizing: border-box;
+ margin: 0;
+ border: 2px var(--color5);
+ box-shadow:  rgba(0, 0, 0, 0.35) 0px 5px 15px;
+ border-radius: 5px;
+ background-color: var(--color4);
+}
+
+#op2{
+    display: block;
+    font-size: 10px;
+    margin-left: 30px;
+    font-family: "gelica", sans-serif;
+    font-weight: 400;
+    color: var(--color5);
+    line-height: 1.3;
+    padding: 10px 10px 10px 10px;
+    width: 400px;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 0;
+    border: 2px var(--color5);
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+    border-radius: 5px;
+    background-color: var(--color4);
+   }
+
+   #op3{
+    display: block;
+    font-size: 10px;
+    margin-left: 30px;
+    font-family: "gelica", sans-serif;
+    font-weight: 400;
+    color: var(--color5);
+    line-height: 1.3;
+    padding: 10px 10px 10px 10px;
+    width: 400px;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 0;
+    border: 2px var(--color5);
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+    border-radius: 5px;
+    background-color: var(--color4);
+   }
+
+   #op4{
+    display: block;
+    font-size: 10px;
+    margin-left: 30px;
+    font-family: "gelica", sans-serif;
+    font-weight: 400;
+    color: var(--color5);
+    line-height: 1.3;
+    padding: 10px 10px 10px 10px;
+    width: 400px;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 0;
+    border: 2px var(--color5);
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+    border-radius: 5px;
+    background-color: var(--color4);
+   }
+
+   #op5{
+    display: block;
+    font-size: 10px;
+    margin-left: 30px;
+    font-family: "gelica", sans-serif;
+    font-weight: 400;
+    color: var(--color5);
+    line-height: 1.3;
+    padding: 10px 10px 10px 10px;
+    width: 400px;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 0;
+    border: 2px var(--color5);
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+    border-radius: 5px;
+    background-color: var(--color4);
+   }
+
+   #op6{
+    display: block;
+    font-size: 10px;
+    margin-left: 30px;
+    font-family: "gelica", sans-serif;
+    font-weight: 400;
+    color: var(--color5);
+    line-height: 1.3;
+    padding: 10px 10px 10px 10px;
+    width: 400px;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 0;
+    border: 2px var(--color5);
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+    border-radius: 5px;
+    background-color: var(--color4);
+   }
+
+   #op7{
+    display: block;
+    font-size: 10px;
+    margin-left: 30px;
+    font-family: "gelica", sans-serif;
+    font-weight: 400;
+    color: var(--color5);
+    line-height: 1.3;
+    padding: 10px 10px 10px 10px;
+    width: 400px;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 0;
+    border: 2px var(--color5);
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+    border-radius: 5px;
+    background-color: var(--color4);
+   }
+
+   #op8{
+    display: block;
+    font-size: 10px;
+    margin-left: 30px;
+    font-family: "gelica", sans-serif;
+    font-weight: 400;
+    color: var(--color5);
+    line-height: 1.3;
+    padding: 10px 10px 10px 10px;
+    width: 400px;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 0;
+    border: 2px var(--color5);
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+    border-radius: 5px;
+    background-color: var(--color4);
+   }
+
+   #op9{
+    display: block;
+    font-size: 10px;
+    margin-left: 30px;
+    font-family: "gelica", sans-serif;
+    font-weight: 400;
+    color: var(--color5);
+    line-height: 1.3;
+    padding: 10px 10px 10px 10px;
+    width: 400px;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 0;
+    border: 2px var(--color5);
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+    border-radius: 5px;
+    background-color: var(--color4);
+   }
+
+   #op10{
+    display: block;
+    font-size: 10px;
+    margin-left: 30px;
+    font-family: "gelica", sans-serif;
+    font-weight: 400;
+    color: var(--color5);
+    line-height: 1.3;
+    padding: 10px 10px 10px 10px;
+    width: 400px;
+    max-width: 100%; 
+    box-sizing: border-box;
+    margin: 0;
+    border: 2px var(--color5);
+    box-shadow: 0 1px 0 1px rgba(0,0,0,.03);
+    border-radius: 5px;
+    background-color: var(--color4);
+   }
+
+
+
+
